# dist/openapi.yaml
@@ -266,7 +266,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/RecipePreview'
+                  $ref: '#/components/schemas/RecipeFullDetailes'
         "204":
           description: no recipes were found for this query
   /users/createrecipe:
@@ -330,7 +330,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RecipeFullDetailes'
+                $ref: '#/components/schemas/MYRecipeFullDetailes'
         "204":
           description: invalid recipeID
         "401":
@@ -549,6 +549,61 @@ components:
           type: string
           description: recipe creator and traditionals
           example: Grandma's recipe that we make in passover
+        image:
+          type: string
+          description: recipe image
+          format: URL
+          example: https://spoonacular.com/recipeimages/655455-566x370.jpg
+        readyInMinutes:
+          type: integer
+          description: the time takes to make this recipe
+          example: 45
+        popularity:
+          type: integer
+          description: how many likes got this recipe
+          example: 5987
+        vegetarian:
+          type: boolean
+          description: indication if the recipe is vegetarian
+          example: false
+        vegan:
+          type: boolean
+          description: indication if the recipe is vegan
+          example: false
+        glutenFree:
+          type: boolean
+          description: indication if the recipe is gluten free
+          example: false
+        extendedIngredients:
+          type: object
+          description: list of dicts of ingredients and their name, amount and unit
+          example: [{
+            "name": "bread",
+            "amount": 1,
+            "unit": "serving"}]
+        servings:
+          type: integer
+          description: how many servings in the recipe
+          example: 4
+        analyzedInstructions:
+          type: object
+          description: instructions of the recipe by steps
+          example: [{"name": "","steps": [{"number": 1,"step": "Preheat the oven to 200 degrees F."}]}]
+    MYRecipeFullDetailes:
+      type: object
+      properties:
+        recipe_id:
+          type: integer
+          description: recipe identifier
+          example: 102
+        user_id:
+          type: integer
+          description: user identifier
+          example: 102
+        title:
+          type: string
+          description: recipe name
+          example: Simple Macaroni and Cheese
         image:
           type: string
           description: recipe image
